# oboe-audio-player

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/oboeaudioplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  AudioProperties.h  DataSource.h  FFMpegExtractor.cpp  FFMpegExtractor.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h
app/src/main/cpp/utils/: UtilityFunctions.h  logging.h
app/src/main/java/com/oboeaudioplayer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/oboeaudioplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
